--- a/projects/style.css
+++ b/projects/style.css
@@ -1,2 +1,168 @@
-/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2024/11/16 22:35:33 */
-[class~=project],[class~=project] div,[class~=project-content]{position:relative;}[class~=project-content],[class~=project]{display:flex;}[class~=project]{justify-content:center;}[class~=project-dot][class~=visible],[class~=project] div:hover{border-left-color:#333;}[class~=project]{align-items:flex-start;}[class~=project-content],[class~=project],[class~=timeline]{margin-left:auto;}[class~=project]{margin-bottom:4em;}[class~=project] div{display:inline-block;}[class~=project-content],[class~=project],[class~=timeline]{margin-right:auto;}[class~=project]{margin-top:4em;}[class~=project-dot][class~=visible],[class~=project] div:hover,[class~=project] div[class~=focused]{border-bottom-color:#333;}[class~=project] div{padding-left:2em;}[class~=project] div:hover,[class~=project-dot][class~=visible],[class~=project] div[class~=focused]{border-right-color:#333;}[class~=project] div{padding-bottom:2em;}[class~=project-content]{flex-direction:column;}[class~=project-content]{align-items:center;}[class~=project-content],[class~=timeline]{margin-bottom:0;}[class~=project] div{padding-right:2em;}[class~=project] div{padding-top:2em;}[class~=project] div,[class~=timeline]{box-sizing:border-box;}[class~=timeline],[class~=project-content]{margin-top:0;}[class~=project-link]{position:absolute;}[class~=project-link]{top:0;}[class~=project-link],[class~=project-dot]{left:0;}[class~=project-link]{right:0;}[class~=project] div{margin-top:3em;}[class~=project] div{width:70%;}[class~=project-link]{bottom:0;}[class~=project-link]{z-index:2;}[class~=project-link]{text-decoration:none;}[class~=project] div{max-width:700px;}[class~=project-link]{color:transparent;}[class~=project-link]{background:transparent;}[class~=project] div:hover,[class~=project-dot][class~=visible],[class~=project] div[class~=focused]{border-top-color:#333;}[class~=project] div,[class~=project-dot]{border-left-width:1.5pt;}[class~=project-dot],[class~=project] div{border-bottom-width:1.5pt;}[class~=project] div,[class~=project-dot]{border-right-width:1.5pt;}[class~=project-link]{cursor:none;}[class~=timeline]{max-width:80%;}[class~=project] div:hover{transform:scale(1.005);}[class~=project-dot],[class~=project] div{border-top-width:1.5pt;}[class~=project-dot][class~=visible],[class~=project] div[class~=focused]{color:#333;}[class~=timeline]{position:relative;}[class~=project] div[class~=focused]{border-left-color:#333;}[class~=timeline]{padding-left:4em;}[class~=project] div,[class~=project-dot]{border-left-style:solid;}[class~=project]::before,[class~=project-dot]{position:absolute;}[class~=project-dot]{top:2.5em;}[class~=project-dot],[class~=project] div{border-bottom-style:solid;}[class~=project-dot]{width:2em;}[class~=project-dot]{height:2em;}[class~=project][class~=focused]::before{background-color:#333;}[class~=project-dot],[class~=project] div{border-right-style:solid;}[class~=project] div,[class~=project-dot]{border-top-style:solid;}[class~=project] div,[class~=project-dot]{border-left-color:#999;}[class~=project-dot]{background:#fff;}[class~=project-dot],[class~=project] div{border-bottom-color:#999;}[class~=project] div,[class~=project-dot]{border-right-color:#999;}[class~=project] div,[class~=project-dot]{border-top-color:#999;}[class~=project] div,[class~=project-dot]{border-image:none;}[class~=project] div{border-radius:10px;}[class~=project] div,.project-description,[class~=project-date],[class~=project-dot]{color:#999;}[class~=project] div{overflow:hidden;}[class~=project] div{transition:transform 1.5s border-color .5s ease,color .5s ease;}[class~=project]::before{content:"";}[class~=project]::before{top:4em;}[class~=project][class~=focused] [class~=project-image]{opacity:1;}[class~=project-dot]{border-radius:50%;}[class~=project-dot]{font-size:2em;}[class~=project]::before{left:0;}[class~=project-dot]{display:flex;}[class~=project]::before{width:.015625in;}[class~=project-dot]{align-items:center;}[class~=project-dot]{justify-content:center;}[class~=project-dot]{transform:translateX(-50%) translateY(-50%);}[class~=project-dot]{z-index:1;}[class~=project-dot]{transition:border-color .5s ease,color .5s ease;}[class~=project-image]{max-width:100%;}[class~=project-image]{flex-shrink:0;}[class~=project]::before{height:125%;}[class~=project]::before{background-color:#999;}[class~=project-image]{height:auto;}[class~=project-image]{opacity:.2;}[class~=project-image]{transition:opacity .2s ease-in-out;}[class~=project-date]{font-size:.8em;}[class~=project]::before{transform:translateX(-50%);}[class~=project]::before{transition:background-color .5s ease;}[class~=project]::before{z-index:0;}[class~=project-date]{margin-top:-.5em;}.project-description{font-size:1em;}.project-description{margin-top:2em;}@media screen and (max-width: 768px){.project div{width:75%;}.project div{padding-left:1.5em;}[class~=timeline]{max-width:90%;}[class~=timeline]{padding-left:3em;}[class~=project]{margin-left:auto;}[class~=project]{margin-bottom:3em;}[class~=project]{margin-right:auto;}.project div{padding-bottom:1.5em;}[class~=project]{margin-top:3em;}[class~=project-dot]{width:1.5em;}.project div{padding-right:1.5em;}[class~=project-dot]{height:1.5em;}[class~=project-dot]{font-size:1.5em;}[class~=project-date],[class~=project-description]{font-size:.9em;}.project div{padding-top:1.5em;}}
+/* Projects container */
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 4em auto;
+}
+
+/* Project link */
+.project-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+/* Project link covering entire content */
+.project-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  text-decoration: none;
+  color: transparent;
+  background: transparent;
+  cursor: none;
+}
+
+/* Timeline container */
+.timeline {
+  max-width: 80%; 
+  margin: 0 auto;
+  position: relative;
+  padding-left: 4em;
+  box-sizing: border-box;
+}
+
+/* Project content (default) */
+.project div {
+  position: relative;
+  display: inline-block;
+  padding: 2em;
+  box-sizing: border-box;
+  margin-top: 3em;
+  width: 70%;
+  max-width: 700px;
+  border: 2px solid #999;
+  border-radius: 10px;
+  color: #999;
+  overflow: hidden;
+  transition: transform 1.5s border-color 0.5s ease, color 0.5s ease;
+}
+
+/* Project container (hover) */
+.project div:hover {
+  border-color: #333;
+  transform: scale(1.005); 
+}
+
+/* Project container (focused) */
+.project div.focused {
+  color: #333;
+  border-color: #333;
+}
+
+/* Vertical line (default) */
+.project::before {
+  content: '';
+  position: absolute;
+  top: 4em;
+  left: 0;
+  width: 1.5px;
+  height: 125%;
+  background-color: #999;
+  transform: translateX(-50%);
+  transition: background-color 0.5s ease;
+  z-index: 0;
+}
+
+/* Vertical line (focused) */
+.project.focused::before {
+  background-color: #333;
+}
+
+/* Project-dot */
+.project-dot {
+  position: absolute;
+  left: 0;
+  top: 2.5em;
+  width: 2em;
+  height: 2em;
+  background: #fff;
+  border: 2px solid #999;
+  border-radius: 50%;
+  color: #999;
+  font-size: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+  transition: border-color 0.5s ease, color 0.5s ease;
+}
+
+/* Project-dot (active) */
+.project-dot.visible {
+  border-color: #333;
+  color: #333;
+}
+
+/* Project image */
+.project-image {
+  max-width: 100%;
+  flex-shrink: 0;
+  height: auto;
+  opacity: 0.2;
+  transition: opacity 0.2s ease-in-out; 
+}
+
+/* Project image (focused) */
+.project.focused .project-image {
+  opacity: 1;
+}
+
+/* Project date line */
+.project-date {
+  font-size: 0.8em;
+  color: #999;
+  margin-top: -0.5em;
+}
+
+/* Project description */
+.project-description {
+  font-size: 1em;
+  margin-top: 2em;
+  color: #999;
+}
+
+/* Smaller Screen */
+@media screen and (max-width: 768px) {
+  .timeline {
+      max-width: 90%;
+      padding-left: 3em;
+  }
+
+  .project {
+      margin: 3em auto;
+  }
+
+  .project div {
+      width: 75%;
+      padding: 1.5em;
+  }
+
+  .project-dot {
+      width: 1.5em;
+      height: 1.5em;
+      font-size: 1.5em;
+  }
+
+  .project-date, .project-description {
+      font-size: 0.9em;
+  }
+}
