--- a/style.css
+++ b/style.css
@@ -415,11 +415,8 @@ nav .nav-button.inactive {
   box-sizing: border-box;
   margin: 0 auto;
 }
-.detail-grid-container .project-description,
-.detail-grid-container .project-date, 
-.detail-grid-container .project-title,
-.detail-grid-container .project-number,
-.detail-grid-container .artwork-paragraph {
+
+.detail-grid-container p {
   color: #333;
   padding: 0;
   margin: 0;
