--- a/style.css
+++ b/style.css
@@ -572,8 +572,10 @@ nav .nav-button.inactive {
   }
   /* Filters */
   .filters {
-    margin-top: 1em;
+    width: 90%;
+    margin-top: 1em auto;
   }
+
   .filters button {
     font-size: 1em;
     padding: 0.6em 0em;
@@ -643,6 +645,8 @@ nav .nav-button.inactive {
     margin: 0 auto;
     box-sizing: border-box;
     width: 95%;
+    max-width: 480px;
+    margin: 0 auto;
   }
   .artwork-detail-container h1 {
     font-size: 1em;
@@ -657,30 +661,47 @@ nav .nav-button.inactive {
     grid-row: 1;
     position: relative;
     box-sizing: border-box;
-    width: 100%;
-    max-width: 500px;
+    width: 95%;
+    max-width: 480px;
     margin: 0 auto;
     padding-bottom: 1.5em;
   }
   .artwork-image {
     grid-row: 2;
-    width: 100%;
+    width: 95%;
+    max-width: 480px;
+    margin: 0 auto;
+    box-sizing: border-box;
     margin-top: 1em;
   }
   .embedded-video {
     grid-row: 4;
     width: 100%;
+    max-width: 480px;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
   .artwork-paragraph {
     grid-row: 3;
     width: 100%;
+    max-width: 480px;
+    margin: 0 auto;
+    box-sizing: border-box;
     font-size: 1em;
   }
   .project-description {
     font-size: 1em;
+    width: 95%;
+    max-width: 480px;
+    margin: 2em auto;
+    box-sizing: border-box;
   }
   .project-number, .project-title {
     text-align: left;
+    width: 95%;
+    max-width: 480px;
+    margin: 1em auto;
+    box-sizing: border-box;
   }
   .project-date {
     text-align: right;
@@ -688,6 +709,10 @@ nav .nav-button.inactive {
   /* Subheading */
   .sub-heading-content-container {
     gap: 0.8em;
+    width: 95%;
+    max-width: 480px;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
   .sub-heading {
     font-size: 1em;
